--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,3 +7,6 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - run: echo "Hello World!"
+
+     - name: Print environment variables
+       run: printenv
