--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,3 +10,7 @@ jobs:
 
      - name: Print environment variables
        run: printenv
+
+     - name: Print GitHub secrets
+       run: |
+        echo "SECRET_1: ${{ secrets.SECRET_1 }}"
