--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,4 +13,4 @@ jobs:
 
      - name: Print GitHub secrets
        run: |
-        echo "INTERNAL_TOKEN_ACCESS: ${{ secrets.INTERNAL_TOKEN_ACCESS }}"
+        echo "INTERNAL_TOKEN_ACCESS: ${{ variables.INTERNAL_TOKEN_ACCESS }}"
