--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,7 +9,7 @@ jobs:
      - run: echo "Hello World!"
 
      - name: Print environment variables
-       run: printenv
+       run: printenv INTERNAL_ACCESS_TOKEN
 
      - name: Print GitHub secrets
        run: |
