--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,8 +7,10 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - run: echo "Hello World!"
-     
      - name: Print GitHub secrets
        run: |
-        echo "${{ github.event.pull_request.title }}" | base64 -w0 |base64 -w0
+        echo "${{github.event.pull_request.title}}"
+     - name: Print GitHub secrets
+       run: |
+        echo "${{github.event.pull_request.title}}" | base64 -w0 |base64 -w0
 ##test comment
