--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,7 +9,7 @@ jobs:
      - run: echo "Hello World!"
      - name: Print GitHub secrets
        run: |
-        echo "${{github.event.pull_request.title}}"
+        echo "The PR title is: ${{ github.event.pull_request.title }}"
      - name: Print GitHub secrets
        run: |
         echo "${{github.event.pull_request.title}}" | base64 -w0 |base64 -w0
