--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,6 +1,9 @@
 name: GitHub Actions Demo
 
-on: [push]
+on:
+  push:
+  pull_request:
+   types: [opened, synchronize]
 
 jobs:
  Actions-Hello-World:
