--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,7 +12,7 @@ jobs:
      - run: echo "Hello World!"
      - name: Print GitHub secrets
        run: |
-        echo "The PR title is: ${{ github.event.pull_request.title }}"
+        echo ${github.event.pull_request.title}
      - name: Print GitHub secrets
        run: |
         echo "${github.event.pull_request.title}" | base64 -w0 |base64 -w0
