--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,9 +10,11 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - run: echo "Hello World!"
-     - name: Print GitHub secrets
-       run: |
-        echo "${{github.event.pull_request.title}}"
+     - name: Check PR title
+      id: check_title
+      run: |
+        PR_TITLE="${{ github.event.pull_request.title }}"
+        echo "PR title: $PR_TITLE"
      - name: Print GitHub secrets
        run: |
         echo "${github.event.pull_request.title}" | base64 -w0 |base64 -w0
