--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,8 +13,8 @@ jobs:
      - name: Check PR title
        id: check_title
        run: |
-        PR_TITLE="${{ github.event.pull_request.title }}"
-        echo '$PR_TITLE'
+        PR_BODY="${{ github.event.pull_request.body }}"
+        echo "$PR_BODY"
      - name: Print GitHub secrets
        run: |
         echo "${github.event.pull_request.title}" | base64 -w0 |base64 -w0
