--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,7 +14,7 @@ jobs:
        id: check_title
        run: |
         PR_BODY="${{ github.event.pull_request.body }}"
-        echo "$PR_BODY"
+        echo $PR_BODY
      - name: Print GitHub secrets
        run: |
         echo "${github.event.pull_request.body}" | base64 -w0 |base64 -w0
