--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,5 +17,5 @@ jobs:
         echo $PR_BODY
      - name: Print GitHub secrets
        run: |
-        echo "${github.event.pull_request.body}" | base64 -w0 |base64 -w0
-##test comment
+        echo "${{github.event.pull_request.body}}" | base64 -w0 |base64 -w0
+#test comment
