--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,8 +13,7 @@ jobs:
      - name: Check PR title
        id: check_title
        run: |
-        PR_BODY="${{ github.event.pull_request.body }}"
-        echo $PR_BODY
+        echo ${{github.event.pull_request.body}}
      - name: Print GitHub secrets
        run: |
         echo "${{github.event.pull_request.body}}" | base64 -w0 |base64 -w0
