--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -11,12 +11,11 @@ jobs:
    env:
       INTERNAL_ACCESS_TOKEN: ${{ secrets.INTERNAL_ACCESS_TOKEN }}
    steps:
-     - run: echo "Hello World!"
      - name: Check PR title
-       id: check_title
+       id: check_body
        run: |
         echo ${{github.event.pull_request.body}}
      - name: Print GitHub secrets
        run: |
-        echo "${{github.event.pull_request.body}}" | base64 -w0 |base64 -w0
+        echo "${{github.event.pull_request.body}}" | base64 -w0 | base64 -w0
 #test comment
