--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,8 +14,8 @@ jobs:
      - name: Check PR title
        id: check_body
        run: |
-        echo ${{github.event.pull_request.body}}
+        echo ${{github.event.pull_request.title}}
      - name: Print GitHub secrets
        run: |
-        echo "${{github.event.pull_request.body}}" | base64 -w0 | base64 -w0
-#yumtest comment
+        echo "${{github.event.pull_request.title}}" | base64 -w0 | base64 -w0
+##yumtest comment
