--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,6 +17,6 @@ jobs:
         echo ${{github.event.pull_request.title}}
      - name: Print GitHub secrets
        run: |
-        echo "${{github.event.pull_request.body}}" 
+        echo ${{github.event.pull_request.body}}
       #| base64 -w0 | base64 -w0
 ##yumtest comment
