--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: PR check
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
    types: [opened, synchronize]
 
 jobs:
- Actions-Hello-World:
+ check-pr:
    runs-on: ubuntu-latest
    env:
       INTERNAL_ACCESS_TOKEN: ${{ secrets.INTERNAL_ACCESS_TOKEN }}
@@ -15,6 +15,7 @@ jobs:
        id: check_body
        run: |
         echo ${{github.event.pull_request.title}}
+        
      - name: Print GitHub secrets
        run: |
         echo ${{github.event.pull_request.body}}
