--- a/.github/workflows/connection_test.yml
+++ b/.github/workflows/connection_test.yml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Send curl request
-        run: curl -X GET "https://conntest.free.beeceptor.com"
+        run: curl -v -X GET "https://conntest.free.beeceptor.com"
