--- a/.github/workflows/connection_test.yml
+++ b/.github/workflows/connection_test.yml
@@ -14,6 +14,8 @@ jobs:
        env: 
          SECRET_JSON: ${{ secrets.SECRET_JSON }}
        run: |
-        USERNAME=$(echo "$SECRET_JSON" | jq '.[] | select(.username == "michal@crtc.mq.edu.au") | .username' )
-        echo $USERNAME
-        curl -u ${{ secrets.BASIC_AUTH_USERNAME }}:${{ secrets.BASIC_AUTH_PASSWORD }} -X GET "https://conntest.free.beeceptor.com"
+        USERNAME=$(echo "$SECRET_JSON" | jq -r '.[] | select(.username == "michal@crtc.mq.edu.au") | .username' )
+        PASSWORD=$(echo "$SECRET_JSON" | jq -r '.[] | select(.username == "michal@crtc.mq.edu.au") | .password' )
+        BODY=$(echo "$SECRET_JSON" | jq -r '.[] | select(.username == "michal@crtc.mq.edu.au") | .body' )
+        echo $USERNAME, $PASSWORD, $BODY
+        curl -u $USERNAME:$PASSWORD -X POST -d "$BODY" "https://conntest.free.beeceptor.com"
