--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -1,9 +1,7 @@
 name: PR check
 
 on:
-  push:
-  pull_request:
-   types: [opened, synchronize, pull_request_target]
+  pull_request_target
 
 jobs:
  check-pr:
